[project]
name = "password-genrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.40.1",
]

[project.optional-dependencies]
dev = [
    "python-lsp-server[all]",  # Language server for better IDE support
    "pyright",                 # Microsoft's static type checker
    "pylint",                 # Linting support
    "mypy",                   # Type checking
    "black",                  # Code formatting
    "rope"                    # Refactoring library
]

[tool.pyright]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pylint]
max-line-length = 100
disable = ["C0111"]  # Missing docstring warning

[tool.black]
line-length = 100
target-version = ["py38"]
